--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -185,8 +185,15 @@ form {
 
 @media (max-width: 1024px) or (max-height: 720px)  {
   #root {
+    height: auto;
     display: grid;
     grid-template-rows: min-content auto;
-    overflow-y: scroll;
+    overflow-y: visible;
+  }
+}
+
+@media (max-width: 480px) {
+  body {
+    padding: 0;
   }
 }
